[package]
name = "among"
version = "0.1.0"
edition = "2018"
rust-version = "1.37"
license = "MIT OR Apache-2.0"
repository = "https://github.com/al8n/among"
homepage = "https://github.com/al8n/among"
documentation = "https://docs.rs/among"
description = """
The enum `Among` with variants `Left`, `Middle` and `Right` is a general purpose sum type with three cases.
"""

keywords = ["data-structure", "no_std", "either"]
categories = ["data-structures", "no-std"]

[dependencies]
either = { version = "1", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[features]
default = ["std"]
std = []

[dev-dependencies]
serde_json = "1.0.0"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[package.metadata.docs.rs]
features = ["serde"]

[package.metadata.playground]
features = ["serde"]