[package]
name = "among"
version = "0.1.1"
edition = "2018"
rust-version = "1.37"
license = "MIT OR Apache-2.0"
repository = "https://github.com/al8n/among"
homepage = "https://github.com/al8n/among"
documentation = "https://docs.rs/among"
description = """
The enum `Among` with variants `Left`, `Middle` and `Right` is a general purpose sum type with three cases.
"""

keywords = ["data-structure", "no_std", "either"]
categories = ["data-structures", "no-std"]

[features]
default = ["std"]
std = ["either?/use_std", "futures-io?/std"]

futures = ["futures-io"]
tokio = ["dep:tokio"]

[dependencies]
either = { version = "1", optional = true }
futures-io = { version = "0.3", optional = true, default-features = false }
tokio = { version = "1", optional = true, default-features = false, features = ["io-util"] }
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.0"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
features = ["serde", "futures", "either", "tokio"]

[package.metadata.playground]
features = ["serde", "futures", "either", "tokio"]
